# tradingview-openclaw-alert-pipeline

./: .gitignore  README.md  pyproject.toml
api/: README.md
api/contracts/: README.md  runtime.ts
api/webhooks/: README.md  tradingview-alert.example.json
backtests/configs/: default-matrix.yaml
backtests/runners/: README.md
data/market/: README.md
db/: README.md
db/migrations/: README.md
db/queries/: README.md  (+1 more)
docs/: batch-testing.md  comparison-workflow.md  coverage-diagnostics.md  evaluation-rubric.md  experiments.md  filter-exit-packs.md  intake-workflow.md  market-data.md  metadata-template.yaml  neon-runtime-env.md  python-backtesting-architecture.md  result-artifacts.md  runtime-foundation.md  uv-environment.md  workflow-blueprint.md
frontend/: package-lock.json  package.json
runtime/: README.md
tests/: test_batch.py  test_coverage_flags.py  test_experiment_batch.py  test_experiments.py  test_ingest_and_catalog.py  test_json_output.py  test_market_data.py  test_market_data_pagination.py  test_promotion_bridge.py  test_reporting_schema.py  test_runtime_foundation.py
tmp/: ema-ma-crossover_analysis.yaml  ema-ma-crossover_metadata.yaml  ema-ma-crossover_source.pine  macd-strategy_analysis.yaml  macd-strategy_metadata.yaml  machine-learning-pivot-points-knn-ss_analysis.yaml  machine-learning-pivot-points-knn-ss_metadata.yaml  machine-learning-pivot-points-knn-ss_source.pine  signal-moving-average-luxalgo_analysis.yaml  signal-moving-average-luxalgo_metadata.yaml  strategy-rsi_analysis.yaml  strategy-rsi_metadata.yaml  strategy-rsi_source.pine
(+124 files in other folders)
